SERVER-30711: -Werror=noexcept-type,  ScopeGuard changes

GitOrigin-RevId: 0db451cf14b7f38491e43a03b9cae169a2297801